src/test/ui/underscore-ident-matcher.stderr
error: no rules expected the token `_`
  --> $DIR/underscore-ident-matcher.rs:8:19
   |
LL | macro_rules! identity {
   | --------------------- when calling this macro
...
LL |     let identity!(_) = 10;
   |                   ^ no rules expected this token in macro call

error: aborting due to previous error

